{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 14,
  "lineage": "0d7fc7b0-71ed-900a-1d9c-1f0c931bb5bc",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/networkInterfaces/dev-env-nic",
            "internal_domain_name_suffix": "rigqmg4kjdnetofonmlp5szufg.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dev-env-internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/publicIPAddresses/dev-env-public-ip",
                "subnet_id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/virtualNetworks/dev-env-vnet/subnets/dev-env-subnet"
              }
            ],
            "location": "southeastasia",
            "mac_address": "00-0D-3A-A0-1A-F7",
            "name": "dev-env-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-env-rg",
            "virtual_machine_id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Compute/virtualMachines/dev-env-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_public_ip.public_ip",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/networkSecurityGroups/dev-env-nsg",
            "location": "southeastasia",
            "name": "dev-env-nsg",
            "resource_group_name": "dev-env-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2020",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev-env-allow-custom-ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev-env-allow-http",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "custom_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "2020",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/networkSecurityGroups/dev-env-nsg/securityRules/dev-env-allow-custom-ssh",
            "name": "dev-env-allow-custom-ssh",
            "network_security_group_name": "dev-env-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "dev-env-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/networkSecurityGroups/dev-env-nsg/securityRules/dev-env-allow-http",
            "name": "dev-env-allow-http",
            "network_security_group_name": "dev-env-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "dev-env-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/publicIPAddresses/dev-env-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.193.48.181",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "dev-env-public-ip",
            "resource_group_name": "dev-env-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/virtualNetworks/dev-env-vnet/subnets/dev-env-subnet",
            "name": "dev-env-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-env-rg",
            "virtual_network_name": "dev-env-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1b060d8a-48ca-49da-b8ae-6b16ffcb342e",
            "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/virtualNetworks/dev-env-vnet",
            "location": "southeastasia",
            "name": "dev-env-vnet",
            "resource_group_name": "dev-env-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/1e65ba5d-ab67-48bc-9e82-cc2279934dca/resourceGroups/dev-env-rg/providers/Microsoft.Network/virtualNetworks/dev-env-vnet/subnets/dev-env-subnet",
                "name": "dev-env-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}